Reworked the UI

--- a/SharpEncrypt/MainWindow.xaml
+++ b/SharpEncrypt/MainWindow.xaml
@@ -5,16 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SharpEncrypt"
         mc:Ignorable="d" Name="PrimaryWindow"
-        Title="SharpEncrypt" Height="250" Width="300">
+        Title="SharpEncrypt" Height="500" Width="600">
     <Grid>
-        <StackPanel Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="30" />
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition Height="30" />
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
             <Button Name="btnOpenFile" Click="btnOpenFile_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open file</Button>
-            <Label x:Name="labelName" Content="Selected: " HorizontalAlignment="Center" />
-            <TextBox x:Name="textboxPassword" />
-            <Button Name="btnEncrypt" Click="btnEncrypt_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Encrypt</Button>
-            <Button Name="btnDecrypt" Click="btnDecrypt_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5,0,5,5">Decrypt</Button>
-            <CheckBox x:Name="checkboxEncryptFilename" HorizontalAlignment="Center" Content="Encrypt filename" IsChecked="True"  Padding="5,0" Margin="5" />
-            <ProgressBar x:Name="progressBar" Height="25" Minimum="0" Maximum="100" />
-        </StackPanel>
+            <DockPanel Grid.Row="1">
+                <Label Content="Password:" />
+                <TextBox x:Name="textboxPassword" VerticalAlignment="Center" Margin="5" />
+            </DockPanel>
+            <local:ScalableListBox x:Name="listboxFiles" Grid.Row="2" Margin="5" />
+        </Grid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <StackPanel Margin="5">
+                <Button Name="btnEncrypt" Click="btnEncrypt_Click" HorizontalAlignment="Center" Padding="10,5">Encrypt</Button>
+                <CheckBox x:Name="checkboxEncryptFilename" HorizontalAlignment="Left" IsChecked="True"  Padding="5,0" Margin="5,5,0,0">
+                    <TextBlock Text="Encrypt filename" TextWrapping="Wrap" />
+                </CheckBox>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Margin="5">
+                <Button Name="btnDecrypt" Click="btnDecrypt_Click" HorizontalAlignment="Center" Padding="10,5">Decrypt</Button>
+            </StackPanel>
+        </Grid>
+        <ProgressBar x:Name="progressBar" Height="20" Minimum="0" Maximum="100" Grid.Row="1" Grid.ColumnSpan="2" Margin="5" />
     </Grid>
 </Window>
