--- a/SharpEncrypt/MainWindow.xaml
+++ b/SharpEncrypt/MainWindow.xaml
@@ -22,13 +22,18 @@
                 <RowDefinition Height="1*" />
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
-            <Button Name="btnOpenFile" Click="btnOpenFile_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open file</Button>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Name="btnOpenFile" Click="btnOpenFile_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open file</Button>
+                <Button Name="btnClearFiles" Click="btnClearFiles_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Clear all files</Button>
+            </StackPanel>
             <DockPanel Grid.Row="1">
                 <Label Content="Password:" />
                 <TextBox x:Name="textboxPassword" VerticalAlignment="Center" Margin="5" />
             </DockPanel>
             <local:ScalableListBox x:Name="listboxFiles" Grid.Row="2" Margin="5" />
-            <local:TextBlockBufferable x:Name="textblockOutput" Grid.Row="3" Margin="5" Padding="5" Background="#FFDEDEDE" TextWrapping="Wrap" />
+            <ScrollViewer Name="scrollViewerOutput" Grid.Row="3" Margin="5" VerticalScrollBarVisibility="Hidden">
+                <local:TextBlockBufferable x:Name="textblockOutput" Padding="5" Background="#FFDEDEDE" TextWrapping="Wrap" />
+            </ScrollViewer>
         </Grid>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
