Implemented folder support

--- a/SharpEncrypt/MainWindow.xaml
+++ b/SharpEncrypt/MainWindow.xaml
@@ -23,6 +23,7 @@
                 <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Name="btnOpenFolder" Click="btnOpenFolder_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open folder</Button>
                 <Button Name="btnOpenFile" Click="btnOpenFile_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open files</Button>
                 <Button Name="btnClearFiles" Click="btnClearFiles_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Clear all files</Button>
             </StackPanel>
