--- a/SharpEncrypt/MainWindow.xaml
+++ b/SharpEncrypt/MainWindow.xaml
@@ -5,55 +5,65 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SharpEncrypt"
         mc:Ignorable="d" Name="PrimaryWindow"
-        Title="SharpEncrypt" Height="500" Width="600">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="4*" />
-            <ColumnDefinition Width="1*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="30" />
-        </Grid.RowDefinitions>
+        Title="SharpEncrypt" Height="500" Width="600" MinHeight="500" MinWidth="600">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_File">
+                <MenuItem Header="_Exit" Click="Exit_App" />
+            </MenuItem>
+            <MenuItem Header="_Options">
+                <MenuItem x:Name="menuReg" Header="_Use context menu items in Windows Explorer" IsCheckable="True" IsChecked="False" ToolTip="Right-click files in Explorer for quick Encrypt and Decrypt options" Click="menuReg_Click" />
+            </MenuItem>
+        </Menu>
         <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition />
                 <RowDefinition Height="30" />
-                <RowDefinition Height="30" />
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Name="btnOpenFolder" Click="btnOpenFolder_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open folder</Button>
-                <Button Name="btnOpenFile" Click="btnOpenFile_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open files</Button>
-                <Button Name="btnClearFiles" Click="btnClearFiles_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Clear all files</Button>
-            </StackPanel>
-            <DockPanel Grid.Row="1">
-                <Label Content="Password:" />
-                <TextBox x:Name="textboxPassword" VerticalAlignment="Center" Margin="5" />
-            </DockPanel>
-            <local:ScalableListBox x:Name="listboxFiles" Grid.Row="2" Margin="5" />
-            <ScrollViewer Name="scrollViewerOutput" Grid.Row="3" Margin="5" VerticalScrollBarVisibility="Hidden">
-                <local:TextBlockBufferable x:Name="textblockOutput" Padding="5" Background="#FFDEDEDE" TextWrapping="Wrap" />
-            </ScrollViewer>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button Name="btnOpenFolder" Click="btnOpenFolder_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open folder</Button>
+                    <Button Name="btnOpenFile" Click="btnOpenFile_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Open files</Button>
+                    <Button Name="btnClearFiles" Click="btnClearFiles_Click" HorizontalAlignment="Center" Padding="5,0" Margin="5">Clear all files</Button>
+                </StackPanel>
+                <DockPanel Grid.Row="1">
+                    <Label Content="Password:" />
+                    <TextBox x:Name="textboxPassword" VerticalAlignment="Center" Margin="5" />
+                </DockPanel>
+                <local:ScalableListBox x:Name="listboxFiles" Grid.Row="2" Margin="5" />
+                <ScrollViewer Name="scrollViewerOutput" Grid.Row="3" Margin="5" VerticalScrollBarVisibility="Hidden">
+                    <local:TextBlockBufferable x:Name="textblockOutput" Padding="5" Background="#FFDEDEDE" TextWrapping="Wrap" />
+                </ScrollViewer>
+            </Grid>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*" />
+                    <RowDefinition Height="1*" />
+                </Grid.RowDefinitions>
+                <StackPanel Margin="5">
+                    <Button Name="btnEncrypt" Click="btnEncrypt_Click" HorizontalAlignment="Center" Padding="10,5">Encrypt</Button>
+                    <CheckBox x:Name="checkboxEncryptFilename" HorizontalAlignment="Left" IsChecked="True"  Padding="5,0" Margin="5,5,0,0">
+                        <TextBlock Text="Encrypt filenames" TextWrapping="Wrap" />
+                    </CheckBox>
+                    <CheckBox x:Name="checkboxEncryptDirname" HorizontalAlignment="Left" IsChecked="True"  Padding="5,0" Margin="5,5,0,0">
+                        <TextBlock Text="Encrypt directory names" TextWrapping="Wrap" />
+                    </CheckBox>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Margin="5">
+                    <Button Name="btnDecrypt" Click="btnDecrypt_Click" HorizontalAlignment="Center" Padding="10,5">Decrypt</Button>
+                </StackPanel>
+            </Grid>
+            <ProgressBar x:Name="progressBar" Height="20" Minimum="0" Maximum="100" Grid.Row="1" Grid.ColumnSpan="2" Margin="5" />
         </Grid>
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*" />
-                <RowDefinition Height="1*" />
-            </Grid.RowDefinitions>
-            <StackPanel Margin="5">
-                <Button Name="btnEncrypt" Click="btnEncrypt_Click" HorizontalAlignment="Center" Padding="10,5">Encrypt</Button>
-                <CheckBox x:Name="checkboxEncryptFilename" HorizontalAlignment="Left" IsChecked="True"  Padding="5,0" Margin="5,5,0,0">
-                    <TextBlock Text="Encrypt filenames" TextWrapping="Wrap" />
-                </CheckBox>
-                <CheckBox x:Name="checkboxEncryptDirname" HorizontalAlignment="Left" IsChecked="True"  Padding="5,0" Margin="5,5,0,0">
-                    <TextBlock Text="Encrypt directory names" TextWrapping="Wrap" />
-                </CheckBox>
-            </StackPanel>
-            <StackPanel Grid.Row="1" Margin="5">
-                <Button Name="btnDecrypt" Click="btnDecrypt_Click" HorizontalAlignment="Center" Padding="10,5">Decrypt</Button>
-            </StackPanel>
-        </Grid>
-        <ProgressBar x:Name="progressBar" Height="20" Minimum="0" Maximum="100" Grid.Row="1" Grid.ColumnSpan="2" Margin="5" />
-    </Grid>
+    </DockPanel>
 </Window>
