Added help menu, application icon, and finalized release version

--- a/SharpEncrypt/MainWindow.xaml
+++ b/SharpEncrypt/MainWindow.xaml
@@ -15,6 +15,10 @@
                 <MenuItem x:Name="menuReg" Header="_Use context menu items in Windows Explorer" IsCheckable="True" IsChecked="False" ToolTip="Right-click files in Explorer for quick Encrypt and Decrypt options" Click="menuReg_Click" />
                 <MenuItem x:Name="menuLog" Header="_Log output to a file" IsCheckable="True" IsChecked="False" Click="menuLog_Click" />
             </MenuItem>
+            <MenuItem Header="_Help">
+                <MenuItem x:Name="menuHow" Header="_How to use" Click="menuHow_Click" />
+                <MenuItem x:Name="menuAbout" Header="_About" IsCheckable="False" Click="menuAbout_Click" />
+            </MenuItem>
         </Menu>
         <Grid>
             <Grid.ColumnDefinitions>
